Text_Analysis/gerapy/projects/weibo/logs/weibo/film/8f932e468de311ea9fe134f39a004e9c.log
2020-05-04 16:45:17 [scrapy.utils.log] INFO: Scrapy 1.8.0 started (bot: weibo)
2020-05-04 16:45:17 [scrapy.utils.log] INFO: Versions: lxml 4.4.2.0, libxml2 2.9.5, cssselect 1.1.0, parsel 1.5.2, w3lib 1.21.0, Twisted 18.7.0, Python 3.7.6 (tags/v3.7.6:43364a7ae0, Dec 19 2019, 00:42:30) [MSC v.1916 64 bit (AMD64)], pyOpenSSL 19.1.0 (OpenSSL 1.1.1d  10 Sep 2019), cryptography 2.8, Platform Windows-10-10.0.17134-SP0
2020-05-04 16:45:17 [scrapy.crawler] INFO: Overridden settings: {'BOT_NAME': 'weibo', 'LOG_FILE': 'logs\\weibo\\film\\8f932e468de311ea9fe134f39a004e9c.log', 'NEWSPIDER_MODULE': 'weibo.spiders', 'SPIDER_MODULES': ['weibo.spiders']}
2020-05-04 16:45:17 [scrapy.middleware] WARNING: Disabled TelnetConsole: TELNETCONSOLE_ENABLED setting is True but required twisted modules failed to import:
Traceback (most recent call last):
  File "e:\software\python3.7.6\lib\site-packages\scrapy\extensions\telnet.py", line 15, in <module>
    from twisted.conch import manhole, telnet
  File "e:\software\python3.7.6\lib\site-packages\twisted\conch\manhole.py", line 154
    def write(self, data, async=False):
                              ^
SyntaxError: invalid syntax

2020-05-04 16:45:17 [scrapy.middleware] INFO: Enabled extensions:
['scrapy.extensions.corestats.CoreStats', 'scrapy.extensions.logstats.LogStats']
2020-05-04 16:45:20 [selenium.webdriver.remote.remote_connection] DEBUG: POST http://127.0.0.1:58719/session {"capabilities": {"firstMatch": [{}], "alwaysMatch": {"browserName": "chrome", "platformName": "any", "goog:chromeOptions": {"extensions": [], "args": []}}}, "desiredCapabilities": {"browserName": "chrome", "version": "", "platform": "ANY", "goog:chromeOptions": {"extensions": [], "args": []}}}
2020-05-04 16:45:20 [urllib3.connectionpool] DEBUG: Starting new HTTP connection (1): 127.0.0.1:58719
2020-05-04 16:45:23 [urllib3.connectionpool] DEBUG: http://127.0.0.1:58719 "POST /session HTTP/1.1" 200 830
2020-05-04 16:45:23 [selenium.webdriver.remote.remote_connection] DEBUG: Finished Request
2020-05-04 16:45:23 [scrapy.middleware] INFO: Enabled downloader middlewares:
['scrapy.downloadermiddlewares.httpauth.HttpAuthMiddleware',
 'scrapy.downloadermiddlewares.downloadtimeout.DownloadTimeoutMiddleware',
 'scrapy.downloadermiddlewares.defaultheaders.DefaultHeadersMiddleware',
 'scrapy.downloadermiddlewares.useragent.UserAgentMiddleware',
 'scrapy.downloadermiddlewares.retry.RetryMiddleware',
 'scrapy.downloadermiddlewares.redirect.MetaRefreshMiddleware',
 'scrapy.downloadermiddlewares.httpcompression.HttpCompressionMiddleware',
 'scrapy.downloadermiddlewares.redirect.RedirectMiddleware',
 'scrapy.downloadermiddlewares.cookies.CookiesMiddleware',
 'scrapy.downloadermiddlewares.httpproxy.HttpProxyMiddleware',
 'scrapy.downloadermiddlewares.stats.DownloaderStats']
2020-05-04 16:45:23 [scrapy.middleware] INFO: Enabled spider middlewares:
['scrapy.spidermiddlewares.httperror.HttpErrorMiddleware',
 'scrapy.spidermiddlewares.offsite.OffsiteMiddleware',
 'scrapy.spidermiddlewares.referer.RefererMiddleware',
 'scrapy.spidermiddlewares.urllength.UrlLengthMiddleware',
 'scrapy.spidermiddlewares.depth.DepthMiddleware']
2020-05-04 16:45:23 [scrapy.middleware] INFO: Enabled item pipelines:
['weibo.pipelines.WeiboPipeline']
2020-05-04 16:45:23 [scrapy.core.engine] INFO: Spider opened
2020-05-04 16:45:23 [scrapy.extensions.logstats] INFO: Crawled 0 pages (at 0 pages/min), scraped 0 items (at 0 items/min)
2020-05-04 16:45:23 [scrapy.core.engine] DEBUG: Crawled (200) <GET https://m.weibo.cn/search?containerid=100103type%3D1%26q%3D%E4%B8%8A%E6%B5%B7%E5%A0%A1%E5%9E%92> (referer: None)
2020-05-04 16:45:23 [selenium.webdriver.remote.remote_connection] DEBUG: POST http://127.0.0.1:58719/session/585df7840948c45661914f972a98c238/url {"url": "https://m.weibo.cn/search?containerid=100103type%3D1%26q%3D%E4%B8%8A%E6%B5%B7%E5%A0%A1%E5%9E%92", "sessionId": "585df7840948c45661914f972a98c238"}
2020-05-04 16:45:26 [urllib3.connectionpool] DEBUG: http://127.0.0.1:58719 "POST /session/585df7840948c45661914f972a98c238/url HTTP/1.1" 200 72
2020-05-04 16:45:26 [selenium.webdriver.remote.remote_connection] DEBUG: Finished Request
2020-05-04 16:45:28 [selenium.webdriver.remote.remote_connection] DEBUG: POST http://127.0.0.1:58719/session/585df7840948c45661914f972a98c238/element {"using": "xpath", "value": ".//ul[contains(@class,'nav-item') and contains(@class,'center')]/li/span[text() = '\u8bdd\u9898']", "sessionId": "585df7840948c45661914f972a98c238"}
2020-05-04 16:45:28 [urllib3.connectionpool] DEBUG: http://127.0.0.1:58719 "POST /session/585df7840948c45661914f972a98c238/element HTTP/1.1" 200 102
2020-05-04 16:45:28 [selenium.webdriver.remote.remote_connection] DEBUG: Finished Request
2020-05-04 16:45:28 [selenium.webdriver.remote.remote_connection] DEBUG: POST http://127.0.0.1:58719/session/585df7840948c45661914f972a98c238/element/0.4098329461543391-1/click {"id": "0.4098329461543391-1", "sessionId": "585df7840948c45661914f972a98c238"}
2020-05-04 16:45:29 [urllib3.connectionpool] DEBUG: http://127.0.0.1:58719 "POST /session/585df7840948c45661914f972a98c238/element/0.4098329461543391-1/click HTTP/1.1" 200 72
2020-05-04 16:45:29 [selenium.webdriver.remote.remote_connection] DEBUG: Finished Request
2020-05-04 16:45:31 [selenium.webdriver.remote.remote_connection] DEBUG: POST http://127.0.0.1:58719/session/585df7840948c45661914f972a98c238/execute {"script": "var q=document.documentElement.scrollTop=100000", "args": [], "sessionId": "585df7840948c45661914f972a98c238"}
